// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component renders empty breadcrumbs 1`] = `
<body>
  <div>
    <div
      class="Breadcrumbs"
      data-test="DesignSystem-Breadcrumbs"
    />
  </div>
</body>
`;

exports[`Breadcrumbs component renders four links 1`] = `
<body>
  <div>
    <div
      class="Breadcrumbs"
      data-test="DesignSystem-Breadcrumbs"
    >
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level0"
          tabindex="0"
        >
          Level 0 check for truncate after 160px
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level1"
          tabindex="0"
        >
          Level 1
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level2"
          tabindex="0"
        >
          Level 2
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
      <div
        class="Breadcrumbs-item"
        data-test="DesignSystem-Breadcrumbs-item"
      >
        <a
          class="Link Link--tiny Link--subtle Breadcrumbs-link ellipsis--noWrap"
          data-test="DesignSystem-Breadcrumbs-link"
          href="/level3"
          tabindex="0"
        >
          Level 3
        </a>
        <span
          class="Breadcrumbs-itemSeparator"
        >
          /
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Breadcrumbs component renders with custom className 1`] = `
<body>
  <div>
    <div
      class="Breadcrumbs My-custom-style"
      data-test="DesignSystem-Breadcrumbs"
    />
  </div>
</body>
`;
